Added remaining docs
