# src/docs/cooking-api.openapi.json
@@ -181,6 +181,76 @@
         }
       }
     },
+    "/ingredients/{id}/outcomes": {
+      "get": {
+        "tags": [
+          "ingredients",
+          "steps"
+        ],
+        "description": "Get all steps that use this ingredient as source.",
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/id"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A list of the steps that use this ingredient as source.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/DetailedStep"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "$ref": "#/components/responses/400"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
+    },
+    "/ingredients/{id}/sources": {
+      "get": {
+        "tags": [
+          "ingredients",
+          "steps"
+        ],
+        "description": "Get all steps that result into this ingredient.",
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/id"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A list of the steps that result into this ingredient.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/DetailedStep"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "$ref": "#/components/responses/400"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
+    },
     "/recipes": {
       "get": {
         "tags": [
@@ -408,6 +478,41 @@
           },
           "404": {
             "$ref": "#/components/responses/404"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
+    },
+    "/utensils/{id}/uses": {
+      "get": {
+        "tags": [
+          "utensils",
+          "steps"
+        ],
+        "description": "Get all steps that use this utensil.",
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/id"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A list of the steps that use this utensil.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/DetailedStep"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "$ref": "#/components/responses/400"
           },
           "500": {
             "$ref": "#/components/responses/500"
